# lfs3

./: Cargo.toml  partitions.csv  test.dump
.cargo/: config.toml
src/: commands.rs  config.rs  control.rs  http_server.rs  lib.rs  network.rs  state.rs  storage.rs
web/: index.js  index2.html  update.html
